--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ language: node_js
 node_js: 18.19.0
 install: skip
 script: sleep 1
+before_install:
+  - rvm install 3.2.0
 deploy:
   provider: npm
   edge:
